# polymarket-Rn1

./: .env .example  .gitignore  Cargo.toml  README.md
dashboard/: dashboard.py
dashboard/templates/: index.html
src/: backtest.rs  config.rs  logger.rs  main.rs
src/client/: clob.rs  gamma.rs  mod.rs  pmxt_ws_pool.rs  sportmonks.rs  sportradar.rs  sports_ws.rs  sportsdataio.rs  types.rs  websocket.rs
src/order/: manager.rs  mod.rs  paper_executor.rs
src/strategy/: engine.rs  farming.rs  hedging.rs  hft.rs  hold.rs  market_making.rs  mispricing.rs  synthetic.rs
